--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,4 +1,5 @@
 .banner{
+    margin-top: 30px;
     background-size: cover;
     height: 540px;
     color: aliceblue;
@@ -32,12 +33,12 @@
     background: #e6e6e6;
 }
 .description{
-    width: 45rem;
+    width: 65rem;
     line-height: 1.3;
     padding-top: 1rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
     height: 80px;
-    max-width: 360px;
+    max-width: 560px;
 }
 .fade_bottom{
     height: 14.4rem;
